`reshape` is batch-friendly

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,21 @@
+@article{DBLP:journals/corr/abs-2102-03406,
+  author    = {Adam Santoro and
+               Andrew K. Lampinen and
+               Kory Mathewson and
+               Timothy P. Lillicrap and
+               David Raposo},
+  title     = {Symbolic Behaviour in Artificial Intelligence},
+  journal   = {CoRR},
+  volume    = {abs/2102.03406},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2102.03406},
+  archivePrefix = {arXiv},
+  eprint    = {2102.03406},
+  timestamp = {Wed, 10 Feb 2021 15:24:32 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2102-03406.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{DBLP:journals/corr/Dulac-ArnoldESC15,
   author    = {Gabriel Dulac{-}Arnold and
                Richard Evans and
